[package]
name = "doger"
version = "0.0.0"
edition = "2021"
description = "The web framework of the future"
license = "ISC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
routefinder = "0.5.3"

[workspace]
members = [
    "tests"
]
